--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// li {
+//   font-weight: lighter;
+//   a {
+//     font-size: 5px;
+//   }
+// }
