--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,12 +1,14 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="col-4">
+    <div class="col-6">
       <h3>Add a dose to <%= @cocktail.name %></h3>
       <%= simple_form_for [@cocktail, @dose] do |f| %>
         <%= f.input :description %>
         <%= f.association :ingredient %>
         <%= f.submit class: "btn btn-danger" %>
       <% end %>
+      <%= link_to "Back to cocktail", "/cocktails/#{@cocktail[:id]}" %>
     </div>
   </div>
 </div>
+
