--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,10 +1,14 @@
-<h1>New cocktail</h1>
-<hr>
-<%= form_for(@cocktail) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-4">
+      <h3>Add a new cocktail</h3>
+      <%= simple_form_for [@cocktail] do |f| %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        <%= f.submit class: "btn btn-danger mt-3" %>
+      <% end %>
+      <%= link_to "Back to list", "/cocktails" %>
+    </div>
+  </div>
+</div>
 
-<hr>
-<%= link_to "Back to list", "/cocktails" %>
