--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -5,6 +5,8 @@
       <%= simple_form_for [@cocktail] do |f| %>
         <%= f.label :name %>
         <%= f.text_field :name %>
+        <%= f.label :instructions %>
+        <%= f.text_field :instructions %>
         <%= f.submit class: "btn btn-danger mt-3" %>
       <% end %>
       <%= link_to "Back to list", "/cocktails" %>
